# um980-rover

./: .gitignore  .scpconfig.json  Cargo.toml  README.md  appstate.rs  get_current_latlng.rs  main.py  main.rs  main__.rs  ntrip_client.rs  parse_nmea.rs  save_latlng.rs  send_live_status_to_client.rs  send_nmea_to_client.rs  st7789.connected.dts  st7789.nodma.dts  st7789.notconnectedyet.dts  st7789.working.dts  test.py  track.rs
connection/: mod.rs
device/: mod.rs
docs/: 404.html  CNAME  index.html  manifest.json
docs/assets/: index-Bo1iH6Gh.css  index-CfaktZ1w.js  index-Dv0-cw4t.js  index-ZmUgxB_G.js
mynmea/: mod.rs  parse_nmea.rs
web/: index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/assets/: AltitudeIcon.tsx
web/src/core/: index.ts
web/src/entities/: LatLng.ts  LiveStatusAPI.ts
web/src/entities/hooks/: useDraftTrack.ts
web/src/entities/types/: NTRIPSettings.ts  TrackInfo.ts
web/src/pages/docVectorization/: AddTrackToolbar.css  AddTrackToolbar.tsx  Canvas.tsx  DocVectorization.css  DocVectorization.tsx  KonvaImageWrapper.tsx
web/src/pages/root/: AddTrackToolbar.css  AddTrackToolbar.tsx  BookmarkFormDialog.css  BookmarkFormDialog.tsx  HomePage.css  HomePage.tsx  LiveStatus.css  LiveStatus.tsx  TrackFormDialog.css  TrackFormDialog.tsx
web/src/pages/terminal/: TerminalPage.css  TerminalPage.tsx
web/src/shared/button/: Button.css  Button.tsx
web/src/shared/dialog/: Dialog.css  Dialog.tsx
web/src/shared/formInputText/: FormInput.css  FormInput.tsx
web/src/shared/hooks/: useAPI.ts  useElementSize.ts  useLocalStorageState.ts  useTransition.ts
web/src/shared/icons/: index.ts
web/src/shared/ui/: Transition.tsx
(+17 files in other folders)
