[package]
name = "nmea-tcp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
oxidize-pdf = "2.3"
regex = "1.10"
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
nusb = "0.2"
futures-util = "0.3"
axum = "0.7"
thiserror = "2.0.18"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = "8.0"
axum-embed = "0.1"
reqwest = { version = "0.11", features = ["blocking"] }


[[bin]]
name = "nmea-tcp"
path = "main.rs"

