[package]
name = "nmea-tcp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidize-pdf = {version = "2.3", features = []}
regex = "1.10"
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
nusb = { version = "0.2", features = ["tokio"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
thiserror = "2.0.18"
anyhow = "1.0"
tower-http = { version = "0.5", default-features = false, features = ["cors"] }
rust-embed = "8.0"
axum-embed = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "http2", "charset", "rustls-tls", "rustls-tls-native-roots"] }
futures = "0.3"
nmea = {version = "0.6", features = ["serde"]}
base64 = "0.22"

[[bin]]
name = "nmea-tcp"
path = "main.rs"


[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
